force-app/main/default/objects/Customer_Visit_Detail__c/Customer_Visit_Detail__c.object-meta.xml
<CustomObject>
    <label>Customer Visit Detail</label>
    <nameField>
        <displayFormat>CVD-{0000}</displayFormat>
        <label>Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>