force-app/main/default/objects/Customer_Visit_Detail__c/fields/Attend_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Attend_From_Customer__c</fullName>
    <inlineHelpText>Input the attend list from customer, separate with comma</inlineHelpText>
    <label>Attend From Customer</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>