force-app/main/default/objects/Customer_Visit_Detail__c/fields/Attend_From_Hisense__c.field-meta.xml
<CustomField>
    <fullName>Attend_From_Hisense__c</fullName>
    <inlineHelpText>Input the name that attend from Hisense and separate with comma</inlineHelpText>
    <label>Attend From Hisense</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>