force-app/main/default/objects/Customer_Visit_Detail__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>customer name of customer visit</description>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>