force-app/main/default/objects/Customer_Visit_Detail__c/fields/Customer_Visit_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Visit Lookup</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Customer Visit Details</relationshipLabel>
    <relationshipName>Customer_Visit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>