force-app/main/default/objects/Customer_Visit_Detail__c/fields/Meetting_Method__c.field-meta.xml
<CustomField>
    <fullName>Meetting_Method__c</fullName>
    <description>online or offline meetting</description>
    <label>Meetting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>